--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="app">
         <div class="green-line"></div>
         <div class="container-boolzapp">
+            <!--container contacts -->
             <div class="container-left">
                 <div class="user-container">
                     <div class="user-container-left">
@@ -44,7 +45,7 @@
                     <input type="text" placeholder="Cerca un contatto">
                 </div>
                 <div class="container-contacts">
-                    <div v-for="contact in contacts" class="contact">
+                    <div v-for="(contact,index) in contacts" @click="changeChat(contact, index)" class="contact">
                         <div class="image-contact">
                             <img :src='contact.avatar' alt="contact image">
                         </div>
@@ -57,15 +58,20 @@
                 </div>
                 
             </div>
+            <!--/ container contacts -->
+
+
+
+            <!-- container chat -->
             <div class="container-right">
                 <div class="chat-contact">
                     <div class="chat-contact-left">
                         <div class="user-image">
-                            <img :src='contacts[0].avatar' alt="chat contact image">
+                            <img :src='contacts[indexActiveChat].avatar' alt="chat contact image">
                         </div>
                         <div class="text-chat-contact">
                             <div class="name-chat-contact">
-                                <strong>{{contacts[0].name}}</strong>
+                                <strong>{{contacts[indexActiveChat].name}}</strong>
                             </div>
         
                             <div class="last-login">
@@ -80,20 +86,24 @@
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
                 </div>
+
+
+                <!-- chat -->
                 <div  class="container-chat">
-                    <div class="container-message-sent">
-                        <div class="message-sent">{{contacts[0].messages[0].message}}</div>
-                        <div class="message-sent">{{contacts[0].messages[1].message}}</div>
-                    </div>
-                    <div class="container-message-received">
-                        <div class="message-received">{{contacts[0].messages[2].message}}</div>
-                    </div>
+                    <div v-for="singleMessage in contacts[indexActiveChat].messages"  :class="singleMessage.status">{{singleMessage.message}}</div>                 
                 </div>
+                <!--/ chat -->
+
+
+
+                <!--container keybord  -->
                 <div class="container-keybord">
                     <i class="fa-regular fa-face-smile icon-keybord"></i>
                     <input id="keybord" type="text" placeholder="scrivi un messaggio">
                     <i class="fa-solid fa-microphone icon-keybord"></i>
                 </div>
+                <!--/container keybord  -->
+
             </div>
         </div>
     </div>
