--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <input type="text" placeholder="Cerca un contatto">
                 </div>
                 <div class="container-contacts">
-                    <div v-for="(contact,index) in contacts" @click="changeChat(contact, index)" class="contact">
+                    <div v-for="(contact,index) in contacts" :class=" index == indexActiveChat ? 'active' : ''" @click="changeChat(contact, index)" class="contact">
                         <div class="image-contact">
                             <img :src='contact.avatar' alt="contact image">
                         </div>
@@ -99,7 +99,7 @@
                 <!--container keybord  -->
                 <div class="container-keybord">
                     <i class="fa-regular fa-face-smile icon-keybord"></i>
-                    <input id="keybord" type="text" placeholder="scrivi un messaggio">
+                    <input id="keybord" @keyup.enter="sendMessage()" v-model="textMessage" type="text" placeholder="scrivi un messaggio">
                     <i class="fa-solid fa-microphone icon-keybord"></i>
                 </div>
                 <!--/container keybord  -->
