--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -37,7 +38,7 @@
                     <i class="fa-solid fa-bell-slash"></i>
                     <div class="text-notification">
                         <p><strong>Ricevi notifiche dei tuoi nuovi messaggi</strong></p>
-                        <a href="#">Attivanotifiche dekstop</a>
+                        <a href="#">Attiva notifiche dekstop</a>
                     </div>
                 </div>
                 <div class="search-contacts">
@@ -51,9 +52,9 @@
                         </div>
                         <div class="text-contact">
                             <div class="name-contact"><strong>{{contact.name}}</strong></div>
-                            <p>Ultimo messaggio inviato</p>
+                            <p>{{contact.messages[contact.messages.length - 1].message}}</p>
                         </div>
-                        <p class="time">12:00</p>
+                        <p class="time">{{contact.messages[contact.messages.length - 1].date}}</p>
                     </div>
                 </div>
                 
@@ -75,7 +76,7 @@
                             </div>
         
                             <div class="last-login">
-                                Ultimo accesso alle 12:00
+                                Ultimo accesso : {{contacts[indexActiveChat].messages[lengthMessage()].date}}
                             </div>
                         </div>
 
@@ -90,7 +91,19 @@
 
                 <!-- chat -->
                 <div  class="container-chat">
-                    <div v-for="singleMessage in contacts[indexActiveChat].messages"  :class="singleMessage.status">{{singleMessage.message}}</div>                 
+                    <div v-for="(singleMessage ,index) in contacts[indexActiveChat].messages" :class="singleMessage.status">
+                        {{singleMessage.message}}
+                        <div class="btn-group">
+                            <button  class="btn btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                                <ul class="dropdown-menu">
+                                    <li @click="deleteMessage(singleMessage,index)">Delete Message</li>
+                                    <li>Info</li>
+                                </ul>
+                        </div>
+                        <div class="message-time">
+                            {{dateMessage(index)}}
+                        </div>
+                    </div>                 
                 </div>
                 <!--/ chat -->
 
@@ -107,7 +120,7 @@
             </div>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
