--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </button>
                             <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="#">Cancella chat</a></li>
-                              <li><a class="dropdown-item" href="#">Cancella messaggi</a></li>
+                              <li><a @click="deleteChat()" class="dropdown-item" href="#">Cancella chat</a></li>
+                              <li><a  class="dropdown-item" href="#">Cancella messaggi</a></li>
                               
                             </ul>
                           </div>
